fixed focus spacing

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -108,15 +108,19 @@ Fonts:
   
 .focus-text {
     grid-area: focus-text;
-    padding-top: 5%;
+    padding-top: 10%;
     align-items: center;
     padding-left: 80px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.focus-text h3{
+    padding-top: 10px;
+}
 .focus-text h6{
     color: gray;
-    
+    padding-top: 15px;
+    padding-bottom: 20px;
 }
 
 .focus-benefit-images{
